idf_component_register(SRCS "main.cpp"
                            "app.cpp" "app.h"
                            "../components/LoRa/lora.c" "../components/LoRa/lora.h" "../components/LoRa/loraRegs.h"
                            "../components/arduino/libraries/WiFi/src/WiFi.h"
                            "post.h" "get.h"
                            "../components/Arduino_JSON/src/Arduino_JSON.h"
                            "../components/Arduino_JSON/src/JSON.cpp"
                            "../components/Arduino_JSON/src/JSONVar.cpp"
                            "../components/ArduinoHttpClient/HttpClient.h"
                    INCLUDE_DIRS "."
                                "../components/LoRa/"
                                "../components/arduino/"
                                "../components/ArduinoHttpClient/"
                                "../components/Arduino_JSON/"
                                "../components/"
                                )
